add scripts for gh pages

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b master -d build"
+    "homepage": "https://SimNeyzi.github.io"
   },
   "eslintConfig": {
     "extends": [
